tgstat 2.1.3 1. Fixed stability issues in multitasking
Former-commit-id: dcd25dce93b4609a911c61835ef4581e4be721cd

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,7 +28,7 @@ all: $(TGT)
 	$(CC) $(CFLAGS) -c -o $@ $< -MP -MMD
 
 $(TGT): $(OBJS)
-	$(CC) -L$(R_HOME)/lib -lpthread -lrt -shared -o $@ $^ $(USR_LINK_FLAGS)
+	$(CC) -L$(R_HOME)/lib -lpthread -shared -o $@ $^ $(USR_LINK_FLAGS)
 
 clean:
 	rm -f $(OBJS) $(DEPS)
