--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: tgstat
 Type: Package
-Title: Tanay's group statistical utilities
-Version: 2.2.3
+Title: Amos Tanay's Group High Performance Statistical Utilities
+Version: 2.2.4
 Depends: utils
 SystemRequirements: C++11
-Date: 2018-04-30
+OS_type: unix
+Date: 2018-05-17
 Author: Misha Hoichman
 Maintainer: Misha Hoichman <misha@hoichman.com>
-Description: Tanay's group statistical utilities
+Description: A collection of high performance utilities to compute distance, correlation, clustering and other tasks.
 License: GPL-2
 LazyLoad: yes
 NeedsCompilation: yes
-Packaged: 2018-04-30 19:45:54 UTC; hoichman
+Packaged: 2018-05-17 05:34:28 UTC; hoichman
