--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: tgstat
 Type: Package
 Title: Amos Tanay's Group High Performance Statistical Utilities
-Version: 2.2.6
+Version: 2.2.7
 Depends: utils
 SystemRequirements: C++11
 OS_type: unix
-Date: 2018-07-14
+Date: 2018-09-04
 Author: Misha Hoichman
 Maintainer: Misha Hoichman <misha@hoichman.com>
 Description: A collection of high performance utilities to compute distance, correlation, clustering and other tasks.
 License: GPL-2
 LazyLoad: yes
 NeedsCompilation: yes
-Packaged: 2018-07-14 11:05:18 UTC; hoichman
+Packaged: 2018-09-04 17:37:28 UTC; hoichman
+Authors@R: person("Misha", "Hoichman", email = "misha@hoichman.com", role = c("aut", "cre"))
+BugReports: https://bitbucket.org/tanaylab/tgstat/issues
