--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: tgstat
 Type: Package
 Title: Amos Tanay's Group High Performance Statistical Utilities
-Version: 2.3.0
+Version: 2.3.1
 Depends: utils
 SystemRequirements: C++11
 OS_type: unix
-Date: 2018-09-10
+Date: 2018-12-07
 Author: Misha Hoichman
-Maintainer: Misha Hoichman <misha@hoichman.com>
+Maintainer: Misha Hoichman <misha.hoichman@weizmann.ac.il>
 Description: A collection of high performance utilities to compute distance, correlation, clustering and other tasks.
 License: GPL-2
 LazyLoad: yes
 NeedsCompilation: yes
-Packaged: 2018-09-11 12:34:37 UTC; hoichman
+Packaged: 2018-12-07 09:26:24 UTC; hoichman
