--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@
 language: R
 warnings_are_errors: false
 cache: packages
+before_install: sudo apt-get install texinfo texlive
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
   provider: script
