--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ warnings_are_errors: false
 cache: packages
 before_install: 
   - sudo apt-get install texinfo texlive
-  - tlmgr install ps­frag amsmath amscd tableposition ifthen inputenc epsfig psfrag listings geometry
+  - tlmgr install amsmath amscd caption ifthen inputenc epsfig psfrag listings geometry
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
   provider: script
