--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ language: R
 warnings_are_errors: false
 cache: packages
 before_install: 
-  - sudo apt-get install texinfo texlive-latex-recommended  
+  - sudo apt-get install texinfo texlive-latex-recommended
+  - tlmgr install dvips
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
   provider: script
