modifed travis yaml
Former-commit-id: 7a6c81ac6ec21c635f4864719461af00c3676124 [formerly cdb844834cf314e069963ccf24793da9ecd1d48d [formerly cddd77925ace465058b0fb966f21a5221f99a5f4]]
Former-commit-id: 54f0bf3714ea7f3bb97be5a275a72aeab3c75e80
Former-commit-id: 3f90df843b378a924df70d86a18697454ed900e1

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
   provider: script
-  script: Rscript -e 'pkgdown::deploy_site_github()'
+  script: Rscript -e 'pkgdown::deploy_site_github(document = FALSE, examples = FALSE)'
   skip_cleanup: true
