modifed travis yaml
Former-commit-id: f7cfba171bf1bc768f1c86d23b12e8ad2f53d1cd [formerly 1b00df45e4d6af9d8b418b87bd204a897ebc3433 [formerly f81aaf371b264f07545c378771db840f139ed33b]]
Former-commit-id: 7d5307774e9ff4f4886808b0bf118dc7be57b2fe
Former-commit-id: b3cf527c6ae6b7bd45a8565fb1536615e913cd11

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 
 language: R
 warnings_are_errors: false
-r_build_args: "--no-codoc --no-examples --no-vignettes --no-build-vignettes --no-tests"
+r_build_args: "--no-vignettes --no-build-vignettes --no-tests"
 r_check_args: "--no-codoc --no-examples --no-vignettes --no-build-vignettes --no-tests"
 cache: packages
 before_install: 
