--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@
 
 language: R
 warnings_are_errors: false
-r_build_args: "--no-vignettes --no-build-vignettes --no-tests"
-r_check_args: "--no-codoc --no-examples --no-vignettes --no-build-vignettes --no-tests"
+r_build_args: "--no-build-vignettes --no-tests"
+r_check_args: "--no-codoc --no-examples --no-build-vignettes --no-tests"
 cache: packages
 before_install: 
   - sudo apt-get install texinfo texlive-latex-recommended
