--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ License: GPL-2
 LazyLoad: yes
 NeedsCompilation: yes
 Packaged: 2019-06-04 10:28:46 UTC; hoichman
+Authors@R: person("Misha", "Hoichman", email = "misha@hoichman.com", role = c("aut", "cre"))
+BugReports: https://github.com/tanaylab/tgstat/issues
