--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,12 @@ SystemRequirements: C++11
 OS_type: unix
 Date: 2020-06-17
 Author: Misha Hoichman
-Maintainer: Misha Hoichman <misha.hoichman@weizmann.ac.il>
+Maintainer: Misha Hoichman <misha@hoichman.com>
 Description: A collection of high performance utilities to compute distance, correlation, clustering and other tasks.
 License: GPL-2
 LazyLoad: yes
+RoxygenNote: 6.1.1
 NeedsCompilation: yes
-Packaged: 2020-06-22 16:29:56 UTC; hoichman
+Packaged: 2020-06-23 11:59:27 UTC; hoichman
 Authors@R: person("Misha", "Hoichman", email = "misha@hoichman.com", role = c("aut", "cre"))
 BugReports: https://github.com/tanaylab/tgstat/issues
