--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,20 @@
 Package: tgstat
 Type: Package
 Title: Amos Tanay's Group High Performance Statistical Utilities
-Version: 2.3.8
+Version: 2.3.9
 Depends: R (>= 3.1.0)
 Imports: utils
 SystemRequirements: C++11
 OS_type: unix
-Date: 2020-06-17
+Date: 2020-06-26
 Author: Misha Hoichman
 Maintainer: Misha Hoichman <misha@hoichman.com>
-Description: A collection of high performance utilities to compute distance, correlation, clustering and other tasks.
+Description: A collection of high performance utilities to compute distance,
+    correlation, auto correlation, clustering and other tasks.
 License: GPL-2
 LazyLoad: yes
 RoxygenNote: 6.1.1
 NeedsCompilation: yes
-Packaged: 2020-06-23 11:59:27 UTC; hoichman
+Packaged: 2020-06-26 13:37:17 UTC; hoichman
 Authors@R: person("Misha", "Hoichman", email = "misha@hoichman.com", role = c("aut", "cre"))
 BugReports: https://github.com/tanaylab/tgstat/issues
