--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tgstat
 Type: Package
 Title: Amos Tanay's Group High Performance Statistical Utilities
-Version: 2.3.16
+Version: 2.3.17
 Depends: R (>= 3.5.0)
 Imports: utils
 SystemRequirements: C++11
@@ -21,5 +21,5 @@ LazyLoad: yes
 RoxygenNote: 6.1.1
 NeedsCompilation: yes
 Packaged: 2020-09-02 18:10:14 UTC; hoichman
-Authors@R: person("Misha", "Hoichman", email = "misha@hoichman.com", role = c("aut", "cre"))
+Authors@R: person("Michael", "Hoichman", email = "misha@hoichman.com", role = c("aut", "cre"))
 BugReports: https://github.com/tanaylab/tgstat/issues
