--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(tgs_graph_cover)
 export(tgs_graph_cover_resample)
 export(tgs_knn)
 export(tgs_matrix_tapply)
+importFrom(utils,head)
+importFrom(utils,tail)
 useDynLib(tgstat,tgs_cor_blas)
 useDynLib(tgstat,tgs_cor_graph)
 useDynLib(tgstat,tgs_cross_cor)
